header spacing fix

--- a/wp-content/themes/danfleming/style.css
+++ b/wp-content/themes/danfleming/style.css
@@ -1003,9 +1003,10 @@ textarea {
 border-left: 20px solid black;
 }
 header {
-  padding-top: 65px;
+  padding-top: 60px;
   padding-bottom: 60px;
     padding-left: 10px;
+		height: 180px;
 }
 header object, header img{
   width: 95%;
@@ -1015,6 +1016,10 @@ header object, header img{
 
 header object:hover {
      fill: #fff;
+}
+
+header .container {
+	max-height: 60px;
 }
 
 .navbar-left {
@@ -1124,7 +1129,7 @@ body {
 }
 
 .twoColumnSection a {
-  border-bottom: 4px solid #E6E6E6;
+  border-bottom: 6px solid #E6E6E6;
   color: #141414;
    -webkit-transition:color .2;
     -moz-transition:color .2s;
@@ -1174,6 +1179,7 @@ body {
   line-height: 40px;
   margin-top: 20px;
   font-family: "sofia-pro",sans-serif;
+	font-weight: 300;
 }
 
 .projectSection img {
